<resources>
    <string name="app_name">Github-user</string>

    <!-- lottie string -->
    <string name="no_data">No Data</string>
    <!-- item card -->
    <string name="tv_item_exname">bagus merta</string>
    <string name="search_hint">Insert Github Username</string>

    <!-- detail section -->
    <string name="ex_username">gusentanan</string>
    <string name="ex_name">Bagus Merta</string>
    <string name="ex_company">Google</string>
    <string name="ex_location">Denpasar. Bali</string>
    <string name="tv_repository">Repository</string>
    <string name="ex_repository">20</string>
    <string name="tv_following">Following</string>
    <string name="ex_following">21</string>
    <string name="tv_followers">Followers</string>
    <string name="ex_followers">25</string>
    <string name="detail_activity">Detail Users</string>

    <!-- string value -->
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="username">username</string>
    <string name="add_to_favorite">add favorite user</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="add_to_favorite_success">Successfully added favorite user</string>
    <string name="add_to_favorite_failed">Something Wrong: add favorite user</string>
    <string name="delete_favorite_success">Successfully deleted favorite user</string>
    <string name="delete_favorite_failed">Something Wrong: delete favorite user</string>
    <string name="back_button">back button</string>
    <string name="favorite_header">Favorite</string>


</resources>