<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
tools:context=".presentation.detail.DetailActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/const_all"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="4dp"
    tools:context=".DetailActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize30Percent"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profile_username"
        style="@style/Text.Header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        tools:text="@string/ex_username" />

    <TextView
        android:id="@+id/profile_name"
        style="@style/Text.Header3"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        tools:text="@string/ex_name" />

    <TextView
        android:id="@+id/profile_company"
        style="@style/Text.Header3"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_username"
        tools:text="@string/ex_company" />

    <TextView
        android:id="@+id/profile_location"
        style="@style/Text.Header4"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_company"
        tools:text="@string/ex_location" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_location">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Text.SubHeader1"
                    android:textStyle="bold"
                    android:text="@string/tv_repository"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/profile_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/ex_repository" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Text.SubHeader1"
                    android:textStyle="bold"
                    android:text="@string/tv_following"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/profile_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/ex_following" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Text.SubHeader1"
                    android:textStyle="bold"
                    android:text="@string/tv_followers"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/profile_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/ex_followers" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

<ProgressBar
    android:id="@+id/progress_bar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="visible"
    android:layout_gravity="center"/>

</FrameLayout>